========================================================================
scrub-2.5.0 Release Notes                                     2012-04-17
========================================================================

* Replace O_SYNC with O_DIRECT+fsync+posix_fadvise [H. Peter Anvin]
  This produces a significant performance improvement, at least on Linux.

* Add support for RDRAND instr. [H. Peter Anvin]

* Use <stdbool.h> if the system has it [H. Peter Anvin]

* Fix incorrect assertion in scrub --dirent handling (issue 9) [Peter Hyman]

* Clean up tmp files after scrub --freespace (issue 9) [Peter Hyman]

* Allow scrub --pattern=custom="string" (issue 11) [Peter Hyman]
  Allow C style numerical escapes in string: \nnn (octal) and \xnn (hex).
  This is a single-pass sequence with a custom pattern.

* Change default buffer size from 1m to 4m [H. Peter Anvin]

* Avoid closing and re-opening /dev/urandom [H. Peter Anvin]

========================================================================
scrub-2.4.2 Release Notes                                     2011-08-29
========================================================================

Same as 2.4.1 but check in missing spec file (as opposed to spec.in).

========================================================================
scrub-2.4.1 Release Notes                                     2011-08-29
========================================================================

* Fix bug in pfitzner7 pattern def and add fillff, fillzero
  methods (issue 8) [Peter Hyman]
    
* Change dod method to perform random pass first and skip extra pass.

* Add --help option that lists available scrub methods.

* Make dist tarball work with rpmbuild -ta.

========================================================================
scrub-2.4 Release Notes                                       2010-11-03
========================================================================

* Added usarmy, pfitzner7, and pfitzner33 methods.
